@@ -120,7 +120,6 @@
 #define TIMESTAMP_IN_REGISTER
 #endif
 
-#define R_FRAME		R_BX
 #ifndef ARCH_X86_32
 #define R_UPCALL	R_R15
 #ifdef TIMESTAMP_IN_REGISTER
@@ -133,6 +132,7 @@
 #define R_OFFSET_IMM	255	/* this should not be used */
 
 #if defined(ARCH_X86_64) && defined(ARCH_X86_WIN_ABI)
+#define R_FRAME		R_BX
 #define R_SCRATCH_1	R_AX
 #define R_SCRATCH_2	R_DX
 #define R_SCRATCH_3	R_CX
@@ -140,13 +140,15 @@
 #define R_SAVED_1	R_SI
 #define R_SAVED_2	R_DI
 #elif defined(ARCH_X86_32)
+#define R_FRAME		R_BP
 #define R_SCRATCH_1	R_AX
 #define R_SCRATCH_2	R_DX
 #define R_SCRATCH_3	R_CX
 #define R_SCRATCH_4	R_SAVED_2
-#define R_SAVED_1	R_BP
+#define R_SAVED_1	R_SI
 #define R_SAVED_2	R_DI
 #else
+#define R_FRAME		R_BX
 #define R_SCRATCH_1	R_AX
 #define R_SCRATCH_2	R_DX
 #define R_SCRATCH_3	R_CX
@@ -194,13 +196,18 @@ static bool reg_is_fp(unsigned reg)
 }
 
 #if defined(ARCH_X86_32)
-static const uint8_t regs_saved[] = { R_SI };
+static const uint8_t regs_saved[] = { R_BX };
 static const uint8_t regs_volatile[] = { 0 };
-#define n_regs_volatile 0
-#define reg_is_saved(r)	1
+#define n_regs_volatile 0U
+static const uint8_t fp_saved[] = { 0 };
+#define n_fp_saved 0U
+static const uint8_t fp_volatile[] = { R_XMM2, R_XMM3, R_XMM4, R_XMM5, R_XMM6, R_XMM7 };
+#define reg_is_saved(r)	((r) == R_BX)
 #elif defined(ARCH_X86_WIN_ABI)
 static const uint8_t regs_saved[] = { };
 static const uint8_t regs_volatile[] = { };
+static const uint8_t fp_saved[] = { };
+static const uint8_t fp_volatile[] = { };
 #define reg_is_saved(r)	1
 #else
 static const uint8_t regs_saved[] = { R_R13,
@@ -209,6 +216,9 @@ static const uint8_t regs_saved[] = { R_R13,
 #endif
 	};
 static const uint8_t regs_volatile[] = { R_SI, R_DI, R_R8, R_R9, R_R10 };
+static const uint8_t fp_saved[] = { 0 };
+#define n_fp_saved 0U
+static const uint8_t fp_volatile[] = { R_XMM2, R_XMM3, R_XMM4, R_XMM5, R_XMM6, R_XMM7, R_XMM8, R_XMM9, R_XMM10, R_XMM11, R_XMM12, R_XMM13, R_XMM14, R_XMM15 };
 #define reg_is_saved(r)	((r) == R_R13 || (r) == R_R14)
 #endif
 
